--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="Access-Control-Allow-Headers" content="*" />
+    <meta name="Access-Control-Allow-Credentials" content="true" />
+    <meta name="Access-Control-Expose-Headers" content="Content-Length" />
+    <meta name="Access-Control-Allow-Origin" content="*" />
     <title>Amino Client</title>
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
     <!-- Add `node_modules/` to global paths so `require` works properly in development -->
